--- a/DotGame/DotGame/GoogleService-Info.plist
+++ b/DotGame/DotGame/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>305483164761-mutu4ql9dbg9pf9djjoogt79c7q0971f.apps.googleusercontent.com</string>
+	<string>305483164761-si8lifaakibjjpsg4b51vvdfjdg9haog.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.305483164761-mutu4ql9dbg9pf9djjoogt79c7q0971f</string>
+	<string>com.googleusercontent.apps.305483164761-si8lifaakibjjpsg4b51vvdfjdg9haog</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBnJ7grYga8Yh3Rvi63qny7BUbpgjRY2YM</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>AlexHor.DotGame</string>
+	<string>com.NikkiBlake.DotGame</string>
 	<key>PROJECT_ID</key>
 	<string>dotgame-331b3</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:305483164761:ios:a98bf7a8450acfaa5f1548</string>
+	<string>1:305483164761:ios:9eac815c9ea371575f1548</string>
 </dict>
 </plist>
